crates/python_parser/tests/snapshots/invalid_syntax@statements__if_extra_indent.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/statements/if_extra_indent.py
---
## AST

```
Module(
    ModModule {
        range: 0..153,
        body: [
            If(
                IfStmt {
                    range: 103..134,
                    test: BooleanLiteral(
                        BooleanLiteralExpr {
                            range: 106..110,
                            value: true,
                        },
                    ),
                    body: [
                        Pass(
                            PassStmt {
                                range: 116..120,
                            },
                        ),
                        Expr(
                            ExprStmt {
                                range: 129..134,
                                value: BinOp(
                                    BinOpExpr {
                                        range: 129..134,
                                        left: Name(
                                            NameExpr {
                                                range: 129..130,
                                                id: Name("a"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            NameExpr {
                                                range: 133..134,
                                                id: Name("b"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
            Pass(
                PassStmt {
                    range: 140..144,
                },
            ),
            Assign(
                AssignStmt {
                    range: 146..152,
                    targets: [
                        Name(
                            NameExpr {
                                range: 146..147,
                                id: Name("a"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 150..152,
                            value: Int(
                                10,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
2 | if True:
3 |     pass
4 |         a + b
  | ^^^^^^^^ Syntax Error: Unexpected indentation
5 | 
6 |     pass
  |


  |
6 |     pass
7 | 
8 | a = 10
  |  Syntax Error: Expected a statement
  |
